hphp/hack/test/typecheck/function_pointer/non_final_self.php.exp
File "non_final_self.php", line 15, characters 5-8:
Cannot use `self::` in a function pointer in a non-final class due to class context ambiguity. Consider using `Foo::foo` instead (Naming[2113])
